fees manager -v1.2